# xbattle

./: .gitignore  COPYRIGHT.SharePtr  INSTALL  Makefile.in  Makefile.std  README  config.h.in  configure.ac
doc/: tutorial1  tutorial2  xbattle.man
share/: atlas.xbo  castle.xbt  default.xbo  demo.xbo  desert.xbo  io.xbo  natural.xbt  simple.xba  skirmish.xbo  space.xbo  tribal.xbo  tropical.xbo  tropical2.xbo  tundra.xbo  xbattle.dot
src/: CommandLine.cc  CommandLine.h  Options.x  SharePtr.h  Util.cc  Util.h  board.h  color.cc  color.h  commandLine.cc  commandline.cc  commandline.h  devnotes  edit.cc  main.cc  option.cc  option.h  options.cc  options.h  orig  player.cc  player.h  replay.cc  team.cc  team.h  teams.cc  teams.h  types.cc  types.h  xbattle.cc  xbattle.h  xbattle.txt
